# frontgardencamera

./: .gitignore  README.md  pyproject.toml
photo_processing/: constants.py  construct_dataset.py  create_video.py  process_images.py  run.py  utilities.py
